# fishhook

./: .gitignore  README.md  config.yaml  fishhook-improvements.md  pyproject.toml
fishhook/: __init__.py  cli.py  orchestrator.py
fishhook/backtest/: __init__.py  engine.py  fetcher.py  metrics.py
fishhook/config/: __init__.py  settings.py
fishhook/dashboard/: __init__.py  server.py  terminal.py
fishhook/dashboard/static/: index.html
fishhook/ingestion/: __init__.py  credibility.py  deduplicator.py  dynamic_values.py  engine.py  interceptor.py  proxy_manager.py  sources.py
fishhook/market/: __init__.py  attribution.py  circuit_breaker.py  client.py  executor.py  models.py  slippage.py
fishhook/strategy/: __init__.py  adaptive_weights.py  engine.py  portfolio_heat.py
fishhook/swarm/: __init__.py  agent.py  consensus.py  social.py  world.py
fishhook/utils/: __init__.py  alerting.py  logging.py
